# Gatekeeper-Bot

./: LICENSE.txt  README.md  bot-functions.py  bot-start.py  bot_functions.py  core.py  gatekeeper_core.py  local_functions.py  main.py  management.py  setup.cfg
BC (Before Cog)/: Readme.md  local_functions.py
cogs/: afterHoursShutdown.py  inactivityChecker.py  moodupdater.py  serveractions.py  startServer.py  statusCheck.py  stopServer.py  ticker.py
gatekeeper/: management.py
src/Gatekeeper-Bot-main/: core.py  management.py
src/Gatekeeper-Bot-main/cogs/: serveractions.py  ticker.py
src/Gatekeeper-Bot-main/gatekeeper/: management.py
templates/: Cog-Template.py
