[metadata]
# replace with your username:
name = Tinroof_Gatekeeper_Bot-Tedtanium
version = 1.0
author = Ted Jensen
author_email = TheodoreKJensen@gmail.com
description = This runs a server management script currently set up to manage an ARK server running on the same machine. [Windows only]
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tedtanium/Gatekeeper-Bot
project_urls =
    Bug Tracker = https://github.com/Tedtanium/Gatekeeper-Bot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Windows 10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src